# leetcode

./: .env  .gitignore  README.md
cpp/: CMakeLists.txt  l00002_add_two_numbers.cpp  l00004_median_two_sorted_arrays.cpp  test_l00002.cpp  test_l00004.cpp
mongodb/: docker-compose.yaml  mongo_practice.py  notes.txt
mongodb-scaled/: clean.sh  docker-compose.yaml  initialize.sh  mongo_scale.py  notes.txt
python/: __001_decorator.py  __002_httpclient.py  __004_asynciodemo.py  __init__.py  l00001_two_sum.py  l00003_longest_substring_no_repeat.py  l00046_permutations.py  l00060_permutation_sequence.py  l00072_edit_distance.py  l00077_combinations.py  l00108_balanced_bst.py  l00131_palindrome_partitioning.py  l00132_palindrome_partitioning_ii.py  l00136_single_number.py  l00137_single_number_ii.py  l00139_word_break_trie.py  l00140_word_break_ii.py  l00148_sort_linked_list.py  l00149_max_points.py  l00174_dungeon_game.py  l00189_rotate_array.py  l00198_house_robber.py  l00212_word_search_ii.py  l00213_house_robber_ii.py  l00214_shortest_palindrome.py  l00215_kth_largest_element.py  l01306_jump_game_iii.py  p__003_library.py  p__005_quick_sort.py  requirements.txt  test_l00001_two_sum.py  test_l00003_longest_substring_no_repeat.py  test_l00046_permutations.py  test_l00060_permutation_sequence.py  test_l00072_edit_distance.py  test_l00077_combinations.py  test_l00108_balanced_bst.py  test_l00131_palindrome_partitioning.py  test_l00132_palindrome_partitioning_ii.py  test_l00136_single_number.py  (+14 more)
sql/: docker-compose.yaml  notes.txt  python_orm.py  requirements.txt
(+8 files in other folders)
